--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-task-manager": "~14.0.8",
     "expo-web-browser": "~15.0.9",
     "lottie-react-native": "~7.3.1",
+    "lucide-react": "^0.555.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
